client/src/components/GasPriceItem.scss
.main_block {
  display: flex;
  flex-direction: column;
  margin-top: 7rem;
  background-color: #CEE2F3;
  width: 40rem;
  height: 12rem;
  justify-content: space-evenly;
  margin-left: 30rem;
  margin-right: 30rem;
  margin-top: 2rem;
  border-radius: 1rem;
  border-width: 3px;
  border-style: solid;
  border-color: #54a0ff;
  font-size: 1rem;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.details_block {
  display: flex;
  flex-direction: row;
  
  
}
.station_details {
  display: flex;
  flex-grow: 2;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.gas_price {
  display: flex;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  border-width: 3px;
  border-style: solid;
  border-color: #54a0ff;
  border-top: 0px;
  border-bottom: 0px;
  border-right: 0px;
}

.gas_station_image {
  width: 6rem;
  height: 6rem;
  padding-left: 1rem;
  padding-top: 1.5rem;
}

.details_link {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 0.5rem;
  padding-bottom: 1.5rem;
  border-width: 3px;
  border-style: solid;
  border-color: #54a0ff;
  border-left: 0px;
  border-bottom: 0px;
  border-right: 0px;
}

